AgressiveOpts analysis.